# libutilitysstdcxx

./: .gitignore  CMakeLists.txt  README.md
cmake/: ComplieOption.cmake  SysInfo.cmake
generate/: utility_preconfig.hpp.in
include/utility/algorithm/: adjacent_find.hpp  algorithm_auxiliary.hpp  all_of.hpp  any_of.hpp  binary_search.hpp  clamp.hpp  copy.hpp  copy_backward.hpp  copy_if.hpp  copy_n.hpp  count.hpp  count_if.hpp  equal.hpp  exchange.hpp  fill.hpp  fill_n.hpp  find.hpp  find_end.hpp  find_first_of.hpp  find_if.hpp  find_if_not.hpp  for_each.hpp  for_each_n.hpp  forward.hpp  hash.hpp  includes.hpp  is_partitioned.hpp  is_permutation.hpp  is_sort_until.hpp  is_sorted.hpp  iter_swap.hpp  lexicographical_compare.hpp  lower_bound.hpp  max.hpp  max_element.hpp  merge.hpp  min.hpp  min_element.hpp  minmax.hpp  minmax_element.hpp  (+17 more)
include/utility/algorithm/experimental/: enhanced_merge_sort.hpp  merge_sort.hpp
include/utility/algorithm/hash_detail/: fnv_hash_1.hpp  fnv_hash_1a.hpp  murmur_hash_2.hpp
include/utility/algorithm/impl/: max.hpp  min.hpp  minmax.hpp
include/utility/algorithm/impl/heap/: make_heap.hpp  pop_heap.hpp  push_heap.hpp  sort_heap.hpp
include/utility/algorithm/impl/possible_swap/: possible_swap_array.hpp  possible_swap_single.hpp
include/utility/cast/: narrow_cast.hpp
include/utility/charS/: basic_static_string.hpp  basic_string.hpp  basic_string_view.hpp  char_traits.hpp  itoa.hpp
include/utility/charS/impl/: string_find.hpp
include/utility/concept/: config.hpp
include/utility/config/: builtin_function.hpp  utility_config.hpp  utility_preconfig.hpp  utility_type.hpp  utility_visibility_config.hpp
include/utility/config/compiler/: MSVC.hpp  clang.hpp  gcc.hpp
include/utility/config/debug/: utility_debug_config.hpp
include/utility/container/: any.hpp  array.hpp  compressed_pair.hpp  container_helper.hpp  cycle_array.hpp  forward_list.hpp  hash_table.hpp  initializer_list.hpp  list.hpp  map.hpp  multimap.hpp  multiset.hpp  optional.hpp  pair.hpp  queue.hpp  set.hpp  stack.hpp  tripair.hpp  tuple.hpp  unexpected.hpp  vector.hpp  white_black_tree.hpp
include/utility/container/detail/: pair_helper.hpp  tripair_helper.hpp  tuple_helper.hpp
include/utility/container/helper/: allocator_deleter.hpp  ignore_t.hpp  in_place_t.hpp  monostate.hpp  node.hpp  node_pool.hpp  nullopt_t.hpp
include/utility/container/impl/: compressed_index.hpp  get.hpp  hash_table_impl.hpp  list_impl.hpp
include/utility/exception/: bad_alloc.hpp  exception.hpp  terminate.hpp
include/utility/functional/: bind.hpp  cref.hpp  function.hpp  invoke.hpp  mem_fn.hpp  placeholders.hpp  ref.hpp  reference_wrapper.hpp
include/utility/iterator/: advance.hpp  base_iterator.hpp  distance.hpp  iterator_tag.hpp  iterator_traits.hpp  move_iterator.hpp  next.hpp  prev.hpp  raw_pointer_iterator.hpp  reverse_iterator.hpp
include/utility/logic/: tribool.hpp
include/utility/math/: bitset.hpp  constval.hpp  math_helper.hpp  ratio.hpp
include/utility/math/bitset/: bitset.hpp
include/utility/math/internal/: _count.hpp
include/utility/memory/: addressof.hpp  align.hpp  allocator.hpp  allocator_helper.hpp  allocator_traits.hpp  basic_allocator.hpp  basic_deallocator.hpp  default_delete.hpp  destroy.hpp  destroy_at.hpp  destroy_n.hpp  new.hpp  observer_ptr.hpp  raw_delete.hpp  temporary_buffer.hpp  uninitialized_copy.hpp  uninitialized_copy_n.hpp  uninitialized_fill.hpp  uninitialized_fill_n.hpp  uninitialized_move.hpp  uninitialized_move_n.hpp  uninitialized_possible_move.hpp  uninitialized_possible_move_n.hpp  unique_ptr.hpp  uses_allocator.hpp
include/utility/miscellaneous/: as_const.hpp  ignore_unused.hpp
include/utility/persistent_container/: container_config.hpp  container_helper.hpp
include/utility/sstd/: cassert.hpp  ccomplex.hpp  cctype.hpp  cerrno.hpp  cfenv.hpp  cfloat.hpp  cinttypes.hpp  ciso646.hpp  climits.hpp  clocale.hpp  cmath.hpp  csetjmp.hpp  csignal.hpp  cstdarg.hpp  cstdbool.hpp  cstddef.hpp  cstdint.hpp  cstdio.hpp  cstdlib.hpp  cstring.hpp  ctgmath.hpp  ctime.hpp  cwchar.hpp  cwctype.hpp  new.hpp  stdarg.hpp  typeinfo.hpp
include/utility/stream/: fpos.hpp  streamoff.hpp
include/utility/trait/: integer_sequence.hpp  integral_constant.hpp  is_unsupport_trait.hpp  trait_helper.hpp  type_traits_fwd.hpp
include/utility/trait/config/: config_builder.hpp
include/utility/trait/identify/: type_identify.hpp
include/utility/trait/miscellaneous/: iterator_traits.hpp  pointer_traits.hpp
include/utility/trait/operation/: conjunction.hpp  disjunction.hpp  negation.hpp
include/utility/trait/opt/: __constant__.hpp  __control__.hpp  __empty__.hpp  __logical__.hpp  __none__.hpp  __operate__.hpp  __result__.hpp  __twochar__.hpp  __types__.hpp  __types_op__.hpp
include/utility/trait/type/: type_features.hpp  type_miscellaneous.hpp  type_property.hpp  type_trait_special.hpp
include/utility/trait/type/operator/: eq.hpp
include/utility/type/: byte.hpp
include/utility/wrapper/: propagate_const.hpp
src/asm/: memset.S
src/builtin/: _about.cpp  _add_overflow.cpp  _breverse.cpp  _mul_overflow_word.cpp  _nlz.cpp  _ntz.cpp  _popcount.cpp  _subset_lex.cpp  builtin_function.h  builtin_function.hpp
src/charS/: memccpy.cpp  memchr.cpp  memcmp.cpp  memcpy.cpp  memmem.cpp  memmove.cpp  mempcpy.cpp  memrchr.cpp  memrcpy.cpp  memset.cpp  stpcat.cpp  stpcpy.cpp  stpncat.cpp  stpncpy.cpp  strcasecmp.cpp  strcasestr.cpp  strcat.cpp  strchr.cpp  strchrnul.cpp  strcmp.cpp  strcpy.cpp  strcspn.cpp  strend.cpp  strlen.cpp  strncasecmp.cpp  strncat.cpp  strncmp.cpp  strncpy.cpp  strnlen.cpp  strpbrk.cpp  strrchr.cpp  strsep.cpp  strspn.cpp  strstr.cpp  wcpcat.cpp  wcpcpy.cpp  wcpncat.cpp  wcpncpy.cpp  wcscat.cpp  wcschr.cpp  (+22 more)
src/ctype/: cctype.cpp  isalnum.cpp  isalpha.cpp  isblank.cpp  iscntrl.cpp  isdigit.cpp  isgraph.cpp  islower.cpp  isprint.cpp  ispunct.cpp  isspace.cpp  isupper.cpp  isxdigit.cpp  tolower.cpp  toupper.cpp
src/errno/: cerrno.cpp
src/memory/: align.cpp
test/container/: forward_list.test.cpp  list.test.cpp  white_black_tree.test.cpp
(+120 files in other folders)
